# Object_Detection

./: .gitignore  README.md  main.py  pyproject.toml
GroundingDINO/: Dockerfile  GroundingDINO_hf.ipynb  README.md
YOLO_byGPT/: dataset.py  loss.py  model.py  train.py  utils.py
YOLOv1/: README.md  dataset.py  inference.py  loss.py  test.py  train.py  utils.py
detr/: README.md
yolov1_torch/: README.md  dataset.py  inference.py  model.py  test.py  train.py  utils.py
