[project]
name = "object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "addict>=2.4.0",
    "cython>=3.1.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pycocotools>=2.0.10",
    "scipy>=1.15.3",
    "submitit>=1.5.3",
    "supervision>=0.22.0",
    "tensorboard>=2.19.0",
    "timm>=1.0.16",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
    "yapf>=0.43.0",
]
